--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-greenlet==3.2.2
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+Flask==3.1.1
+greenlet
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 playwright==1.52.0
 pyee==13.0.0
 typing_extensions==4.13.2
+Werkzeug==3.1.3
